# sop_2_bpmn

./: .env.example  README.md  pyproject.toml  setup.sh
examples/: input_sop.docx  output.bpmn
problem_statement/: Candidate Brief_Eng test.docx
src/: config.py  main.py
src/api/: dependencies.py  routes.py
src/generator/: bpmn_builder.py  bpmn_xml_writer.py  layout.py
src/models/: bpmn.py  sop.py
src/parser/: base.py  docx_parser.py  llm_analyzer.py
src/templates/: index.html
tests/: conftest.py  test_api.py  test_bpmn_builder.py  test_bpmn_xml_writer.py  test_parser.py
